# rs-license-formatter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  THIRDPARTY.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: clippy.yml  fmt.yml  release-please.yml  semantic-pull-request.yml  test.yml
src/: converter.rs  main.rs  reader.rs  writers.rs
src/readers/: mod.rs  yaml_reader.rs
src/writers/: md_writer.rs  mod.rs
