[package]
authors     = ["Jani Ojanen <jajuojan@gmail.com>"]
description = ""
edition     = "2021"
license     = "MIT"
name        = "rs-license-formatter"
readme      = "README.md"
repository  = "https://github.com/jajuojan/rs-license-formatter"
version     = "0.1.0"

[dependencies]
clap       = { version = "4.5.27", features = ["derive"] }
regex      = "1.11"
serde      = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
codegen-units = 1
lto           = true
strip         = true
